...
  var useParticipantsInterests by rememberSaveable { mutableStateOf(false) }

  // Context used to access resources when generating the prompt
  val context = LocalContext.current

  Scaffold(
      modifier = Modifier.testTag("assistantScreen"),
      content = { pd ->
        Column {
          TopBarWithImageAndText(
              trip, navigationActions, stringResource(R.string.ask_assistant), trip.name)

          Row(modifier = Modifier.padding(start = 16.dp, end = 16.dp, top = 8.dp)) {
...
                  if (!newValue.contains('\n')) {
                    prompt = newValue
                  }
                },
                maxLines = 3,
                modifier =
                    Modifier.testTag("AIRequestTextField")
                        .weight(0.8f)
                        .padding(end = 16.dp)
                        .align(Alignment.CenterVertically)
                        .onKeyEvent { event ->
                          if (event.key == Key.Enter) {
                            keyboardController?.hide()
...
                          if (useUserInterests) userInterests
                          else if (useParticipantsInterests) participantsInterests else emptyList(),
                      provideFinalActivities = provideFinalActivities,
                  )
                },
                enabled = uiState !is UiState.Loading, // Disable the button during loading
                modifier = Modifier.testTag("AIRequestButton").align(Alignment.CenterVertically)) {
                  Text(text = stringResource(R.string.ask))
                }

            // Button to open the settings dialog
            IconButton(
                onClick = { showSettingsDialog = true },
                modifier = Modifier.testTag("settingsButton").align(Alignment.CenterVertically)) {
                  Icon(imageVector = Icons.Default.Settings, contentDescription = "Settings")
                }
          }

          when (uiState) {
            is UiState.Loading -> {
              // Show a loading indicator
              Box(modifier = Modifier.fillMaxSize()) {
                CircularProgressIndicator(
                    modifier = Modifier.align(Alignment.Center).testTag("loadingIndicator"))
              }
            }
            is UiState.Initial -> {
              // When entering the screen, show a text to prompt the user to ask the assistant
              Box(modifier = Modifier.fillMaxSize()) {
                Text(
                    text = stringResource(R.string.assistant_initial_screen),
                    textAlign = TextAlign.Center,
                    color = MaterialTheme.colorScheme.onSurface,
                    modifier =
                        Modifier.testTag("initialStateText").align(Alignment.Center).padding(16.dp))
              }
            }
            is UiState.Error -> {
              // Show an error message
              result = (uiState as UiState.Error).errorMessage
              Box(modifier = Modifier.fillMaxSize()) {
                Text(
                    text = stringResource(R.string.assistant_error),
                    textAlign = TextAlign.Center,
                    color = MaterialTheme.colorScheme.onSurface,
                    modifier = Modifier.testTag("errorMessage").align(Alignment.Center))
              }
              Log.e("AssistantScreen", "Error: $result")
            }
            is UiState.Success -> {
              // Show the activities generated by the assistant
              result = (uiState as UiState.Success).outputText
...
                Box(modifier = Modifier.fillMaxSize()) {
                  Text(
                      text = stringResource(R.string.assistant_no_activities),
                      textAlign = TextAlign.Center,
                      color = MaterialTheme.colorScheme.onSurface,
                      modifier =
                          Modifier.testTag("emptyActivitiesPrompt")
                              .align(Alignment.Center)
                              .padding(bottom = 80.dp, start = 16.dp, end = 16.dp))
                }
              } else {
                // Show the activities
                LazyColumn(
...
    useInterests: Boolean,
    onUseInterestsChanged: (Boolean) -> Unit,
    useParticipantsInterests: Boolean,
    onUseParticipantsInterestsChanged: (Boolean) -> Unit,
) {
  AlertDialog(
      modifier = Modifier.testTag("settingsDialog"),
      onDismissRequest = onDismiss,
      title = { Text(text = stringResource(R.string.settings)) },
      text = {
        Column {
          Row(verticalAlignment = Alignment.CenterVertically) {
            // Explain the settings
...
                Text(
                    stringResource(R.string.provide_final_activities),
                    modifier = Modifier.weight(1f))
                Switch(
                    checked = provideDraftActivities,
                    onCheckedChange = onProvideFinalActivitiesChanged,
                    modifier = Modifier.testTag("provideFinalActivitiesSwitch"))
              }
          Spacer(modifier = Modifier.height(4.dp))

          Row(
              verticalAlignment = Alignment.CenterVertically,
              horizontalArrangement = Arrangement.spacedBy(8.dp)) {
...
                    onCheckedChange = { isChecked ->
                      onUseInterestsChanged(isChecked)
                      if (isChecked) {
                        onUseParticipantsInterestsChanged(false) // Turn off the other switch
                      }
                    },
                    modifier = Modifier.testTag("useUserInterestsSwitch"))
              }
          Spacer(modifier = Modifier.height(4.dp))

          Row(
              verticalAlignment = Alignment.CenterVertically,
              horizontalArrangement = Arrangement.spacedBy(8.dp)) {
...
                    onCheckedChange = { isChecked ->
                      onUseParticipantsInterestsChanged(isChecked)
                      if (isChecked) {
                        onUseInterestsChanged(false) // Turn off the other switch
                      }
                    },
                    modifier = Modifier.testTag("useParticipantsInterestsSwitch"))
              }
        }
      },
      confirmButton = {
        Button(onClick = onDismiss, modifier = Modifier.testTag("closeDialogButton")) {
          Text(stringResource(R.string.close))
        }
      })
}

