...
    LaunchedEffect(Unit) { navigationActions.navigateTo(Route.SEARCH) }
    return
  }

  Scaffold(
      modifier = Modifier.testTag("userProfileScreen"),
      topBar = {
        TopAppBar(
            title = { Text("${user?.name ?: "User"}'s Profile") },
            navigationIcon = {
              IconButton(
                  onClick = {
                    navigationActions.goBack() // Navigate back
...
